...
    <string name="maps_warning_text">In order to use this application you need to have Google Maps installed.</string>
    <string name="home_partners_tag">PARTNERS</string>

    <!-- MENU -->
    <string name="menu_sos">SOS</string>
    <string name="menu_home">HOME</string>
    <string name="menu_trails">TRAILS</string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_logout">LOGOUT</string>

    <!-- LOGIN -->
    <string name="login_button">LOGIN</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>

    <!-- PROFILE -->
    <string name="profile_premium_content_desc">Premium Logo</string>
    <string name="profile_picture_content_desc">User Stock Photo</string>
    <string name="history_button">History</string>
    <string name="settings_button">Settings</string>
    <string name="first_last_name">First Last Name</string>
    <string name="profile_username">Username</string>

    <!-- TRAIL's LIST -->
    <string name="trail_duration">Duration: </string>
    <string name="trail_difficulty">Difficulty: </string>

    <!-- TRAIL -->
    <string name="trail_start">START</string>
    <string name="trail_stop">STOP</string>
    <string name="trail_desc_tag">DESCRIPTION</string>
    <string name="trail_itinerary_tag">ITINERARY</string>

    <!-- POINT OF INTEREST -->
    <string name="point_location">SEE LOCATION</string>
    <string name="point_desc_tag">DESCRIPTION</string>
...

    <!-- MEDIA -->
    <string name="media_total_time">00:00</string>
    <string name="media_current_time">00:00</string>
    <string name="media_download">Download</string>
    <string name="pause_button_desc">pause_button</string>
    <string name="stop_button_desc">stop_button</string>
    <string name="start_button_desc">start_button</string>
    <string name="point_media_image">point_media_image</string>

    <!-- HISTORY TRAIL -->
    <string name="history_trail_date">Date: </string>
    <string name="history_trail_distance_travelled">Travelled Distance: </string>
    <string name="history_trail_time_travelled">Travelled Time: </string>
...
