<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground"
    android:id="@+id/historyTrailItem">

    <androidx.cardview.widget.CardView
        android:id="@+id/history_trail_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_blue"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/history_trail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/logo_yellow"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="55dp"
            android:text="@string/trail_duration"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/history_trail_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="55dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="15dp"
            android:text="@string/trail_difficulty"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/history_trail_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="15dp"
            android:text="@string/history_trail_date"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/history_trail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="15dp"
            android:text="@string/history_trail_distance_travelled"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/history_trail_travelled_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="155dp"
            android:layout_marginBottom="15dp"
            android:text="@string/history_trail_time_travelled"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/history_trail_travelled_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="155dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/history_trail_image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_margin="15dp"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/contentdesc_trail_image"
            android:src="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

</LinearLayout>