<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/premium_trail_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.PremiumTrailActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/premium_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/premium_trail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/logo_yellow"
                    android:textSize="@dimen/title_size"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/premium_trail_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_complement_size"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_15"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/premium_trail_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_complement_size"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintTop_toBottomOf="@+id/premium_trail_duration"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.75" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/premium_trail_gallery"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="16:9"
                android:layout_margin="@dimen/margin_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/premium_title_layout"
                android:contentDescription="@string/contentdesc_trail_image"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/premium_trail_desc_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_15"
                android:text="@string/trail_desc_tag"
                android:textColor="@color/white"
                android:textSize="@dimen/subtitle_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/premium_trail_gallery" />

            <TextView
                android:id="@+id/premium_trail_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_15"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/premium_trail_desc_tag" />

            <TextView
                android:id="@+id/premium_trail_itinerary_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_15"
                android:text="@string/trail_itinerary_tag"
                android:textColor="@color/white"
                android:textSize="@dimen/subtitle_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/premium_trail_desc" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/premium_mapView"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:layout_margin="@dimen/margin_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/premium_trail_itinerary_tag" />

            <RelativeLayout
                android:id="@+id/buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/premium_mapView">

                <Button
                    android:id="@+id/start_button"
                    android:layout_width="@dimen/small_button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentStart="true"
                    android:backgroundTint="@color/logo_yellow"
                    android:text="@string/trail_start"
                    android:textSize="@dimen/small_button_text"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/stop_button"
                    android:layout_width="@dimen/small_button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/dark_grey"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/trail_stop"
                    android:textSize="@dimen/small_button_text"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_premium_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_15"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttons_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>